packages/ui-library/src/css/inputs.scss
// INPUT GLOBAL VARS -------------------------------------------------------------------------------
$default-input-transition: all 0.3s;
$default-input-height: 40px;
$default-input-font-size: 14px;
$borderSize: 1px !default;
$default-input-border-radius: 2px;


// CORE INPUT STYLES -------------------------------------------------------------------------------

// General browser-specific overrides (not needed specifically for each input type below - reduces bloat having it here)
input,
textarea,
select {
    -webkit-appearance: none;
    -moz-appearance: none;
    &:-moz-focusring {
        color: transparent;
        text-shadow: 0 0 0 $color-black;
    }
    &::-ms-clear {
        display: none;
    }
    &::-ms-expand {
        display: none;
    }
    &::-ms-value {
        color: $color-midnight;
        background: none;
    }
}

// Tag styling
input[type=text],
input[type=password],
input[type=color],
input[type=date],
input[type=datetime],
input[type=datetime-local],
input[type=email],
input[type=month],
input[type=number],
input[type=range],
input[type=search],
input[type=tel],
input[type=time],
input[type=url],
input[type=week],
textarea {
    display: block;
    color: $color-input-text;
    background-color: $color-input-fill;
    border: 1px solid $color-input-fill;
    font-size: 14px;
    height: $default-input-height;
    box-sizing: border-box;
    outline: none;
    font-family: $font-pn-regular;

    @include border-radius($default-input-border-radius);
    @include transition($default-input-transition);

    &:visited {
        border: 1px solid $color-input-fill;
    }
    &:hover {
        border: 1px solid $color-input-border;
    }
    &:focus {
        border-color: $color-active-blue;
    }
}

textarea {
    overflow: auto;
    max-width: 930px;

    &[readonly],
    &[disabled] {
        resize: none !important;
    }
}
/* ... */

